# Tensor-Operation-Library

./: .gitignore  MODULE.bazel  README.md
cpp/: BUILD  add_test  matrix.cc  matrix.h  matrix_pybind.cc
cpp/tensor/: BUILD
cpp/tensor/core/: tensor.cc  tensor.h  tensor_buffer.cc  tensor_buffer.h  tensor_view.cc  tensor_view.h
cpp/tensor/expr/: add_expr.cc  add_expr.h  buffer_expr.h  expr.h  view_expr.h
cpp/tensor/kernels/: add_kernel.cc  add_kernel.h
cpp/tensor/ops/: add.cc
cpp/tensor/pybind/: BUILD  op_bindings.cc  op_bindings.h  tensor_bindings.cc  tensor_bindings.h  tensor_pybind.cc
cpp/tensor/tests/: add_test.cc
python/: BUILD  main.py
python/matrix_py/: __init__.py
